--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,34 @@
 /* styles.css */
 
-/* Общие стили для увеличения масштаба */
+/* Общие стили */
 body {
     font-size: 1.5em;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    box-sizing: border-box;
 }
 
 /* Стили для нотного стана */
 #notation {
     margin-top: 20px;
+    width: 100%;
+    max-width: 600px;
 }
 
 /* Стили для пианино */
 #piano {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    position: absolute;
+    bottom: 20px; /* Опускаем клавиатуру вниз */
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 90%;
 }
 
 /* Стили для клавиш пианино */
@@ -25,7 +36,6 @@ body {
     width: 50px;
     height: 150px;
     margin: 2px;
-    background-color: white;
     border: 1px solid black;
     border-radius: 5px;
     font-size: 1em;
@@ -34,14 +44,11 @@ body {
     cursor: pointer;
 }
 
-#piano button:active {
-    background-color: #ccc;
-    box-shadow: 0 2px #666;
-    transform: translateY(2px);
+#piano button.white-key {
+    background-color: white;
 }
 
-/* Стили для черных клавиш */
-.black-key {
+#piano button.black-key {
     width: 30px;
     height: 100px;
     background-color: black;
@@ -50,4 +57,10 @@ body {
     z-index: 1;
     margin-left: -15px;
     margin-right: -15px;
+}
+
+#piano button:active {
+    background-color: #ccc;
+    box-shadow: 0 2px #666;
+    transform: translateY(2px);
 }
