--- a/styles.css
+++ b/styles.css
@@ -23,44 +23,48 @@ body {
 #piano {
     display: flex;
     justify-content: center;
+    align-items: flex-end;
     position: absolute;
     bottom: 20px; /* Опускаем клавиатуру вниз */
     left: 0;
     right: 0;
-    margin: 0 auto;
-    width: 100%; /* Устанавливаем ширину в 100% от экрана */
-    max-width: 750px; /* Максимальная ширина для больших экранов */
-}
-
-/* Стили для клавиш пианино */
-#piano button {
-    flex: 1; /* Растягиваем клавиши по ширине равномерно */
-    height: 150px;
-    margin: 2px;
-    border: 1px solid black;
-    border-radius: 5px;
-    font-size: 1em;
-    box-shadow: 0 4px #999;
-    cursor: pointer;
+    width: 100%;
+    max-width: 750px; /* Максимальная ширина клавиатуры */
+    height: 60%; /* Увеличиваем высоту клавиатуры */
+    background: rgba(255, 255, 255, 0.8); /* Прозрачный фон */
+    padding: 0 10px; /* Добавляем отступы для краев клавиатуры */
+    box-sizing: border-box;
 }
 
 /* Стили для белых клавиш */
 #piano button.white-key {
+    flex: 1;
+    height: 100%;
+    margin: 0 1px;
     background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 0 4px #999;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
 }
 
 /* Стили для черных клавиш */
 #piano button.black-key {
-    width: 60%; /* Ширина черных клавиш относительно белых */
-    height: 100px;
+    width: 60%; /* Черные клавиши шире */
+    height: 70%; /* Высота черных клавиш */
     background-color: black;
     color: white;
-    position: relative;
-    z-index: 1;
-    margin-left: -15px;
-    margin-right: -15px;
+    border: 1px solid black;
     border-radius: 5px;
     box-shadow: 0 4px #666;
+    position: absolute;
+    z-index: 2;
+    margin-left: -30px; /* Смещение для центрирования над белыми клавишами */
+    margin-right: -30px;
+    left: 50%; /* Смещаем в центр родителя */
+    transform: translateX(-50%); /* Центрируем относительно белых клавиш */
 }
 
 /* Стиль при нажатии на клавиши */
