--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,7 @@ body {
     width: 100%;
     max-width: 750px; /* Максимальная ширина клавиатуры */
     height: 200px; /* Фиксированная высота клавиатуры */
-    background: rgba(255, 255, 255, 0.8); /* Прозрачный фон */
-    padding: 0 10px; /* Добавляем отступы для краев клавиатуры */
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -40,7 +39,7 @@ body {
 #piano button.white-key {
     flex: 1;
     height: 100%;
-    margin: 0 2px;
+    margin: 0 1px;
     background-color: white;
     border: 1px solid black;
     border-radius: 0 0 5px 5px;
@@ -52,24 +51,22 @@ body {
 /* Стили для черных клавиш */
 #piano button.black-key {
     position: absolute;
-    width: 60%;
-    height: 60%;
+    width: 60px; /* Фиксированная ширина черных клавиш */
+    height: 120px; /* Фиксированная высота черных клавиш */
     background-color: black;
     color: white;
     border: 1px solid black;
     border-radius: 0 0 5px 5px;
     box-shadow: 0 4px #666;
     z-index: 2;
-    margin-left: -30px;
-    margin-right: -30px;
 }
 
-/* Индивидуальное позиционирование черных клавиш относительно белых */
-#piano button:nth-child(2) { left: 8.5%; }
-#piano button:nth-child(4) { left: 25%; }
-#piano button:nth-child(7) { left: 58%; }
-#piano button:nth-child(9) { left: 75%; }
-#piano button:nth-child(11) { left: 91.5%; }
+/* Позиционирование черных клавиш относительно белых */
+#piano button:nth-child(2) { left: 50px; }
+#piano button:nth-child(4) { left: 120px; }
+#piano button:nth-child(7) { left: 260px; }
+#piano button:nth-child(9) { left: 330px; }
+#piano button:nth-child(11) { left: 400px; }
 
 /* Стиль при нажатии на клавиши */
 #piano button:active {
