--- a/styles.css
+++ b/styles.css
@@ -19,39 +19,44 @@ body {
     max-width: 600px;
 }
 
-/* Стили для пианино */
-#piano {
+/* Контейнер для клавиатуры */
+#piano-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-end;
     position: absolute;
     bottom: 20px; /* Опускаем клавиатуру вниз */
-    left: 0;
-    right: 0;
     width: 100%;
-    max-width: 750px; /* Максимальная ширина клавиатуры */
-    height: 200px; /* Фиксированная высота клавиатуры */
-    padding: 0;
-    box-sizing: border-box;
+    height: 300px; /* Увеличиваем высоту клавиатуры */
+}
+
+/* Стили для пианино */
+#piano {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 80%; /* Увеличиваем ширину клавиатуры */
+    max-width: 800px;
+    height: 100%;
 }
 
 /* Стили для белых клавиш */
-#piano button.white-key {
+.white-key {
     flex: 1;
-    height: 100%;
-    margin: 0 1px;
+    margin: 0 2px;
     background-color: white;
     border: 1px solid black;
     border-radius: 0 0 5px 5px;
-    box-shadow: 0 4px #999;
+    height: 100%;
     position: relative;
     z-index: 1;
+    box-shadow: 0 4px #999;
 }
 
 /* Стили для черных клавиш */
-#piano button.black-key {
+.black-key {
     position: absolute;
-    width: 40%; /* Ширина черных клавиш */
+    width: 60px; /* Ширина черных клавиш */
     height: 60%; /* Высота черных клавиш */
     background-color: black;
     color: white;
@@ -61,12 +66,12 @@ body {
     z-index: 2;
 }
 
-/* Позиционирование черных клавиш относительно белых */
-#piano button:nth-child(2) { left: 65px; }
-#piano button:nth-child(4) { left: 140px; }
-#piano button:nth-child(7) { left: 285px; }
-#piano button:nth-child(9) { left: 360px; }
-#piano button:nth-child(11) { left: 435px; }
+/* Индивидуальное позиционирование черных клавиш */
+.black-key:nth-of-type(1) { left: 55px; }
+.black-key:nth-of-type(2) { left: 155px; }
+.black-key:nth-of-type(3) { left: 355px; }
+.black-key:nth-of-type(4) { left: 455px; }
+.black-key:nth-of-type(5) { left: 555px; }
 
 /* Стиль при нажатии на клавиши */
 #piano button:active {
