--- a/styles.css
+++ b/styles.css
@@ -19,59 +19,46 @@ body {
     max-width: 600px;
 }
 
-/* Контейнер для клавиатуры */
-#piano-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    position: absolute;
-    bottom: 20px; /* Опускаем клавиатуру вниз */
-    width: 100%;
-    height: 300px; /* Увеличиваем высоту клавиатуры */
-}
-
 /* Стили для пианино */
 #piano {
-    position: relative;
     display: flex;
-    justify-content: space-between;
-    width: 80%; /* Увеличиваем ширину клавиатуры */
-    max-width: 800px;
-    height: 100%;
+    justify-content: center;
+    position: absolute;
+    bottom: 20px; /* Опускаем клавиатуру вниз */
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 90%;
 }
 
 /* Стили для белых клавиш */
-.white-key {
-    flex: 1;
-    margin: 0 2px;
+#piano button.white-key {
+    width: 50px;
+    height: 150px;
+    margin: 2px;
     background-color: white;
     border: 1px solid black;
-    border-radius: 0 0 5px 5px;
-    height: 100%;
-    position: relative;
-    z-index: 1;
+    border-radius: 5px;
+    font-size: 1em;
     box-shadow: 0 4px #999;
+    cursor: pointer;
 }
 
 /* Стили для черных клавиш */
-.black-key {
-    position: absolute;
-    width: 60px; /* Ширина черных клавиш */
-    height: 60%; /* Высота черных клавиш */
+#piano button.black-key {
+    width: 30px;
+    height: 100px;
     background-color: black;
     color: white;
     border: 1px solid black;
-    border-radius: 0 0 5px 5px;
+    position: relative;
+    z-index: 1;
+    margin-left: -15px;
+    margin-right: -15px;
+    border-radius: 5px;
     box-shadow: 0 4px #666;
-    z-index: 2;
+    cursor: pointer;
 }
-
-/* Индивидуальное позиционирование черных клавиш */
-.black-key:nth-of-type(1) { left: 55px; }
-.black-key:nth-of-type(2) { left: 155px; }
-.black-key:nth-of-type(3) { left: 355px; }
-.black-key:nth-of-type(4) { left: 455px; }
-.black-key:nth-of-type(5) { left: 555px; }
 
 /* Стиль при нажатии на клавиши */
 #piano button:active {
