Увеличили клавиатуру и исправили стили клавиш

--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,13 @@ body {
     right: 0;
     margin: 0 auto;
     width: 90%;
+    max-width: 800px; /* Устанавливаем максимальную ширину клавиатуры */
 }
 
 /* Стили для белых клавиш */
 #piano button.white-key {
-    width: 50px;
-    height: 150px;
+    width: 60px; /* Увеличиваем ширину белых клавиш */
+    height: 200px; /* Увеличиваем высоту белых клавиш */
     margin: 2px;
     background-color: white;
     border: 1px solid black;
@@ -46,15 +47,15 @@ body {
 
 /* Стили для черных клавиш */
 #piano button.black-key {
-    width: 30px;
-    height: 100px;
+    width: 40px; /* Ширина черных клавиш относительно белых */
+    height: 120px; /* Высота черных клавиш */
     background-color: black;
     color: white;
     border: 1px solid black;
     position: relative;
     z-index: 1;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: -20px; /* Смещение черных клавиш влево для расположения поверх белых */
+    margin-right: -20px; /* Смещение черных клавиш вправо */
     border-radius: 5px;
     box-shadow: 0 4px #666;
     cursor: pointer;
