--- a/styles.css
+++ b/styles.css
@@ -19,43 +19,73 @@ body {
     max-width: 600px;
 }
 
+/* Контейнер для кнопок управления октавами */
+#controls {
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    max-width: 800px;
+    margin: 20px 0;
+}
+
+/* Стили для кнопок управления октавами */
+#controls button {
+    width: 80px;
+    height: 40px;
+    font-size: 1.2em;
+    border: 1px solid black;
+    background-color: #f0f0f0;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+#controls span {
+    display: flex;
+    align-items: center;
+    font-size: 1.5em;
+}
+
 /* Стили для пианино */
+#piano-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    position: absolute;
+    bottom: 20px;
+    width: 90%;
+    max-width: 1600px;
+}
+
 #piano {
     display: flex;
     justify-content: center;
-    position: absolute;
-    bottom: 20px; /* Опускаем клавиатуру вниз */
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    width: 90%;
-    max-width: 1600px; /* Увеличиваем максимальную ширину клавиатуры */
+    width: 100%;
 }
 
 /* Стили для белых клавиш */
 #piano button.white-key {
-    width: 120px; /* Увеличиваем ширину белых клавиш в 2 раза */
-    height: 300px; /* Увеличиваем высоту белых клавиш в 2 раза */
-    margin: 4px; /* Увеличиваем отступы */
+    width: 120px;
+    height: 300px;
+    margin: 4px;
     background-color: white;
     border: 1px solid black;
     border-radius: 5px;
-    font-size: 1.5em; /* Увеличиваем размер шрифта */
+    font-size: 1em;
     box-shadow: 0 4px #999;
     cursor: pointer;
 }
 
 /* Стили для черных клавиш */
 #piano button.black-key {
-    width: 80px; /* Увеличиваем ширину черных клавиш в 2 раза */
-    height: 200px; /* Увеличиваем высоту черных клавиш в 2 раза */
+    width: 80px;
+    height: 200px;
     background-color: black;
     color: white;
     border: 1px solid black;
     position: relative;
     z-index: 1;
-    margin-left: -40px; /* Регулируем смещение черных клавиш */
-    margin-right: -40px; /* Регулируем смещение черных клавиш */
+    margin-left: -40px;
+    margin-right: -40px;
     border-radius: 5px;
     box-shadow: 0 4px #666;
     cursor: pointer;
